obj/tpIntegrador.output
Estado 187 conflictos: 1 desplazamiento(s)/reducción(ones)
Estado 202 conflictos: 2 reducción(ones)/reducción(ones)


Gramática

    0 $accept: input $end

    1 input: /* vacío */
    2      | input line

    3 line: declaracion '\n'
    4     | sentencia '\n'
    5     | error '\n'
    6     | error ';'

    7 expresion: expresionAsignacion
    8          | expresion ',' expresionAsignacion

    9 expresionAsignacion: expresionCondicional
   10                    | expresionUnaria '=' expresionAsignacion
   11                    | expresionUnaria OP_ASIGNACION expresionAsignacion

   12 expresionCondicional: expresionOLogico
   13                     | expresionOLogico '?' expresion ':' expresionCondicional

   14 expresionOLogico: expresionYLogico
   15                 | expresionOLogico OP_O_LOGICO expresionYLogico

   16 expresionYLogico: expresionOInclusivo
   17                 | expresionYLogico OP_Y_LOGICO expresionOInclusivo

   18 expresionOInclusivo: expresionY
   19                    | expresionOInclusivo OP_O_INCLUSIVO expresionY

   20 expresionY: expresionIgualdad
   21           | expresionY '&' expresionIgualdad

   22 expresionIgualdad: expresionRelacional
   23                  | expresionIgualdad OP_IGUALDAD expresionRelacional
   24                  | expresionIgualdad OP_DESIGUALDAD expresionRelacional

   25 expresionRelacional: expresionAditiva
   26                    | expresionRelacional OP_RELACIONAL expresionAditiva

   27 expresionAditiva: expresionMultiplicativa
   28                 | expresionAditiva '+' expresionMultiplicativa
   29                 | expresionAditiva '-' expresionMultiplicativa

   30 expresionMultiplicativa: expresionConversion
   31                        | expresionMultiplicativa '*' expresionConversion
   32                        | expresionMultiplicativa OP_DIVISION expresionConversion
   33                        | expresionMultiplicativa OP_PORCENTAJE expresionConversion

   34 expresionConversion: expresionUnaria
   35                    | '(' TIPO_DATO ')' expresionConversion

   36 expresionUnaria: expresionSufijo
   37                | OP_INCREMENTO expresionUnaria
   38                | OP_DECREMENTO expresionUnaria
   39                | operadorUnario expresionConversion
   40                | SIZEOF expresionUnaria
   41                | SIZEOF '(' TIPO_DATO ')'

   42 operadorUnario: '&'
   43               | '*'
   44               | '+'
   45               | '-'
   46               | '~'
   47               | '!'

   48 expresionSufijo: expresionPrimaria
   49                | expresionSufijo '[' expresion ']'
   50                | expresionSufijo '(' listaArgumentos_ ')'
   51                | expresionSufijo OP_INCREMENTO

   52 listaArgumentos: expresionAsignacion
   53                | listaArgumentos ',' expresionAsignacion

   54 expresionPrimaria: IDENTIFICADOR
   55                  | constante
   56                  | CTE_CADENA
   57                  | '(' expresion ')'

   58 expresionConstante: expresionCondicional

   59 constante: CTE_DECIMAL
   60          | CTE_OCTAL
   61          | CTE_HEXADECIMAL
   62          | CTE_REAL
   63          | CTE_CARACTER

   64 declaracion: declaracionVariable
   65            | declaracionFuncion

   66 declaracionVariable: TIPO_DATO declarador ';'

   67 declarador: unaDeclaracion
   68           | unaDeclaracion '=' inicializador

   69 inicializador: expresionAsignacion
   70              | '{' listaInicializadores '}'
   71              | '{' listaInicializadores ',' listaInicializadores '}'

   72 listaInicializadores: inicializador
   73                     | listaInicializadores ',' inicializador

   74 declaracionFuncion: TIPO_DATO IDENTIFICADOR '(' listaParametros_ ')' ';'
   75                   | TIPO_DATO IDENTIFICADOR '(' listaParametros_ ')' sentenciaCompuesta

   76 listaDeParametros: parametro
   77                  | listaDeParametros ',' parametro

   78 parametro: TIPO_DATO IDENTIFICADOR unaDeclaracion

   79 unaDeclaracion: /* vacío */
   80               | puntero declaradorDirecto

   81 puntero: '*'
   82        | '*' puntero

   83 declaradorDirecto: IDENTIFICADOR
   84                  | declaradorDirecto '[' expresionConstante_ ']'

   85 sentencia: sentenciaExpresion
   86          | sentenciaCompuesta
   87          | sentenciaSeleccion
   88          | sentenciaIteracion
   89          | sentenciaEtiquetada
   90          | sentenciaSalto

   91 sentenciaExpresion: ';'
   92                   | expresion ';'

   93 sentenciaCompuesta: '{' listaDeclaraciones_ listaSentencias_ '}'

   94 listaDeDeclaraciones: declaracion
   95                     | listaDeDeclaraciones declaracion

   96 listaDeSentencias: sentencia
   97                  | listaDeSentencias sentencia

   98 sentenciaSeleccion: IF '(' expresion ')' sentencia
   99                   | IF '(' expresion ')' sentencia ELSE sentencia
  100                   | SWITCH '(' expresion ')' sentencia

  101 sentenciaIteracion: WHILE '(' expresion ')' sentencia
  102                   | DO sentencia WHILE '(' expresion ')' ';'
  103                   | FOR '(' expresion_ ';' expresion_ ';' expresion_ ')' sentencia

  104 sentenciaEtiquetada: CASE expresionConstante ':' sentencia
  105                    | DEFAULT ':' sentencia

  106 sentenciaSalto: CONTINUE ';'
  107               | BREAK ';'
  108               | RETURN expresion_ ';'

  109 listaArgumentos_: /* vacío */
  110                 | listaArgumentos

  111 expresionConstante_: /* vacío */
  112                    | expresionConstante

  113 listaParametros_: /* vacío */
  114                 | listaDeParametros

  115 expresion_: /* vacío */
  116           | expresion

  117 listaDeclaraciones_: /* vacío */
  118                    | listaDeDeclaraciones

  119 listaSentencias_: /* vacío */
  120                 | listaDeSentencias


Terminales con las reglas donde aparecen

$end (0) 0
'\n' (10) 3 4 5
'!' (33) 47
'&' (38) 21 42
'(' (40) 35 41 50 57 74 75 98 99 100 101 102 103
')' (41) 35 41 50 57 74 75 98 99 100 101 102 103
'*' (42) 31 43 81 82
'+' (43) 28 44
',' (44) 8 53 71 73 77
'-' (45) 29 45
':' (58) 13 104 105
';' (59) 6 66 74 91 92 102 103 106 107 108
'=' (61) 10 68
'?' (63) 13
'[' (91) 49 84
']' (93) 49 84
'{' (123) 70 71 93
'}' (125) 70 71 93
'~' (126) 46
error (256) 5 6
IDENTIFICADOR (258) 54 74 75 78 83
TIPO_DATO (259) 35 41 66 74 75 78
SIZEOF (260) 40 41
CTE_DECIMAL (261) 59
CTE_OCTAL (262) 60
CTE_HEXADECIMAL (263) 61
CTE_REAL (264) 62
OP_O_LOGICO (265) 15
OP_Y_LOGICO (266) 17
OP_O_INCLUSIVO (267) 19
OP_ASIGNACION (268) 11
OP_IGUALDAD (269) 23
OP_DESIGUALDAD (270) 24
OP_RELACIONAL (271) 26
OP_DIVISION (272) 32
OP_PORCENTAJE (273) 33
OP_INCREMENTO (274) 37 51
OP_DECREMENTO (275) 38
DO (276) 102
WHILE (277) 101 102
IF (278) 98 99
ELSE (279) 99
SWITCH (280) 100
CASE (281) 104
DEFAULT (282) 105
BREAK (283) 107
CONTINUE (284) 106
FOR (285) 103
RETURN (286) 108
CTE_CADENA (287) 56
CTE_CARACTER (288) 63


No terminales con las reglas donde aparecen

$accept (52)
    en la izquierda: 0
input (53)
    en la izquierda: 1 2, en la derecha: 0 2
line (54)
    en la izquierda: 3 4 5 6, en la derecha: 2
expresion (55)
    en la izquierda: 7 8, en la derecha: 8 13 49 57 92 98 99 100 101
    102 116
expresionAsignacion (56)
    en la izquierda: 9 10 11, en la derecha: 7 8 10 11 52 53 69
expresionCondicional (57)
    en la izquierda: 12 13, en la derecha: 9 13 58
expresionOLogico (58)
    en la izquierda: 14 15, en la derecha: 12 13 15
expresionYLogico (59)
    en la izquierda: 16 17, en la derecha: 14 15 17
expresionOInclusivo (60)
    en la izquierda: 18 19, en la derecha: 16 17 19
expresionY (61)
    en la izquierda: 20 21, en la derecha: 18 19 21
expresionIgualdad (62)
    en la izquierda: 22 23 24, en la derecha: 20 21 23 24
expresionRelacional (63)
    en la izquierda: 25 26, en la derecha: 22 23 24 26
expresionAditiva (64)
    en la izquierda: 27 28 29, en la derecha: 25 26 28 29
expresionMultiplicativa (65)
    en la izquierda: 30 31 32 33, en la derecha: 27 28 29 31 32 33
expresionConversion (66)
    en la izquierda: 34 35, en la derecha: 30 31 32 33 35 39
expresionUnaria (67)
    en la izquierda: 36 37 38 39 40 41, en la derecha: 10 11 34 37
    38 40
operadorUnario (68)
    en la izquierda: 42 43 44 45 46 47, en la derecha: 39
expresionSufijo (69)
    en la izquierda: 48 49 50 51, en la derecha: 36 49 50 51
listaArgumentos (70)
    en la izquierda: 52 53, en la derecha: 53 110
expresionPrimaria (71)
    en la izquierda: 54 55 56 57, en la derecha: 48
expresionConstante (72)
    en la izquierda: 58, en la derecha: 104 112
constante (73)
    en la izquierda: 59 60 61 62 63, en la derecha: 55
declaracion (74)
    en la izquierda: 64 65, en la derecha: 3 94 95
declaracionVariable (75)
    en la izquierda: 66, en la derecha: 64
declarador (76)
    en la izquierda: 67 68, en la derecha: 66
inicializador (77)
    en la izquierda: 69 70 71, en la derecha: 68 72 73
listaInicializadores (78)
    en la izquierda: 72 73, en la derecha: 70 71 73
declaracionFuncion (79)
    en la izquierda: 74 75, en la derecha: 65
listaDeParametros (80)
    en la izquierda: 76 77, en la derecha: 77 114
parametro (81)
    en la izquierda: 78, en la derecha: 76 77
unaDeclaracion (82)
    en la izquierda: 79 80, en la derecha: 67 68 78
puntero (83)
    en la izquierda: 81 82, en la derecha: 80 82
declaradorDirecto (84)
    en la izquierda: 83 84, en la derecha: 80 84
sentencia (85)
    en la izquierda: 85 86 87 88 89 90, en la derecha: 4 96 97 98 99
    100 101 102 103 104 105
sentenciaExpresion (86)
    en la izquierda: 91 92, en la derecha: 85
sentenciaCompuesta (87)
    en la izquierda: 93, en la derecha: 75 86
listaDeDeclaraciones (88)
    en la izquierda: 94 95, en la derecha: 95 118
listaDeSentencias (89)
    en la izquierda: 96 97, en la derecha: 97 120
sentenciaSeleccion (90)
    en la izquierda: 98 99 100, en la derecha: 87
sentenciaIteracion (91)
    en la izquierda: 101 102 103, en la derecha: 88
sentenciaEtiquetada (92)
    en la izquierda: 104 105, en la derecha: 89
sentenciaSalto (93)
    en la izquierda: 106 107 108, en la derecha: 90
listaArgumentos_ (94)
    en la izquierda: 109 110, en la derecha: 50
expresionConstante_ (95)
    en la izquierda: 111 112, en la derecha: 84
listaParametros_ (96)
    en la izquierda: 113 114, en la derecha: 74 75
expresion_ (97)
    en la izquierda: 115 116, en la derecha: 103 108
listaDeclaraciones_ (98)
    en la izquierda: 117 118, en la derecha: 93
listaSentencias_ (99)
    en la izquierda: 119 120, en la derecha: 93


estado 0

    0 $accept: . input $end

    $default  reduce usando la regla 1 (input)

    input  ir al estado 1


estado 1

    0 $accept: input . $end
    2 input: input . line

    $end             desplazar e ir al estado 2
    error            desplazar e ir al estado 3
    IDENTIFICADOR    desplazar e ir al estado 4
    TIPO_DATO        desplazar e ir al estado 5
    SIZEOF           desplazar e ir al estado 6
    CTE_DECIMAL      desplazar e ir al estado 7
    CTE_OCTAL        desplazar e ir al estado 8
    CTE_HEXADECIMAL  desplazar e ir al estado 9
    CTE_REAL         desplazar e ir al estado 10
    OP_INCREMENTO    desplazar e ir al estado 11
    OP_DECREMENTO    desplazar e ir al estado 12
    DO               desplazar e ir al estado 13
    WHILE            desplazar e ir al estado 14
    IF               desplazar e ir al estado 15
    SWITCH           desplazar e ir al estado 16
    CASE             desplazar e ir al estado 17
    DEFAULT          desplazar e ir al estado 18
    BREAK            desplazar e ir al estado 19
    CONTINUE         desplazar e ir al estado 20
    FOR              desplazar e ir al estado 21
    RETURN           desplazar e ir al estado 22
    CTE_CADENA       desplazar e ir al estado 23
    CTE_CARACTER     desplazar e ir al estado 24
    ';'              desplazar e ir al estado 25
    '&'              desplazar e ir al estado 26
    '+'              desplazar e ir al estado 27
    '-'              desplazar e ir al estado 28
    '*'              desplazar e ir al estado 29
    '('              desplazar e ir al estado 30
    '~'              desplazar e ir al estado 31
    '!'              desplazar e ir al estado 32
    '{'              desplazar e ir al estado 33

    line                     ir al estado 34
    expresion                ir al estado 35
    expresionAsignacion      ir al estado 36
    expresionCondicional     ir al estado 37
    expresionOLogico         ir al estado 38
    expresionYLogico         ir al estado 39
    expresionOInclusivo      ir al estado 40
    expresionY               ir al estado 41
    expresionIgualdad        ir al estado 42
    expresionRelacional      ir al estado 43
    expresionAditiva         ir al estado 44
    expresionMultiplicativa  ir al estado 45
    expresionConversion      ir al estado 46
    expresionUnaria          ir al estado 47
    operadorUnario           ir al estado 48
    expresionSufijo          ir al estado 49
    expresionPrimaria        ir al estado 50
    constante                ir al estado 51
    declaracion              ir al estado 52
    declaracionVariable      ir al estado 53
    declaracionFuncion       ir al estado 54
    sentencia                ir al estado 55
    sentenciaExpresion       ir al estado 56
    sentenciaCompuesta       ir al estado 57
    sentenciaSeleccion       ir al estado 58
    sentenciaIteracion       ir al estado 59
    sentenciaEtiquetada      ir al estado 60
    sentenciaSalto           ir al estado 61


estado 2

    0 $accept: input $end .

    $default  aceptar


estado 3

    5 line: error . '\n'
    6     | error . ';'

    '\n'  desplazar e ir al estado 62
    ';'   desplazar e ir al estado 63


estado 4

   54 expresionPrimaria: IDENTIFICADOR .

    $default  reduce usando la regla 54 (expresionPrimaria)


estado 5

   66 declaracionVariable: TIPO_DATO . declarador ';'
   74 declaracionFuncion: TIPO_DATO . IDENTIFICADOR '(' listaParametros_ ')' ';'
   75                   | TIPO_DATO . IDENTIFICADOR '(' listaParametros_ ')' sentenciaCompuesta

    IDENTIFICADOR  desplazar e ir al estado 64
    '*'            desplazar e ir al estado 65

    $default  reduce usando la regla 79 (unaDeclaracion)

    declarador      ir al estado 66
    unaDeclaracion  ir al estado 67
    puntero         ir al estado 68


estado 6

   40 expresionUnaria: SIZEOF . expresionUnaria
   41                | SIZEOF . '(' TIPO_DATO ')'

    IDENTIFICADOR    desplazar e ir al estado 4
    SIZEOF           desplazar e ir al estado 6
    CTE_DECIMAL      desplazar e ir al estado 7
    CTE_OCTAL        desplazar e ir al estado 8
    CTE_HEXADECIMAL  desplazar e ir al estado 9
    CTE_REAL         desplazar e ir al estado 10
    OP_INCREMENTO    desplazar e ir al estado 11
    OP_DECREMENTO    desplazar e ir al estado 12
    CTE_CADENA       desplazar e ir al estado 23
    CTE_CARACTER     desplazar e ir al estado 24
    '&'              desplazar e ir al estado 26
    '+'              desplazar e ir al estado 27
    '-'              desplazar e ir al estado 28
    '*'              desplazar e ir al estado 29
    '('              desplazar e ir al estado 69
    '~'              desplazar e ir al estado 31
    '!'              desplazar e ir al estado 32

    expresionUnaria    ir al estado 70
    operadorUnario     ir al estado 48
    expresionSufijo    ir al estado 49
    expresionPrimaria  ir al estado 50
    constante          ir al estado 51


estado 7

   59 constante: CTE_DECIMAL .

    $default  reduce usando la regla 59 (constante)


estado 8

   60 constante: CTE_OCTAL .

    $default  reduce usando la regla 60 (constante)


estado 9

   61 constante: CTE_HEXADECIMAL .

    $default  reduce usando la regla 61 (constante)


estado 10

   62 constante: CTE_REAL .

    $default  reduce usando la regla 62 (constante)


estado 11

   37 expresionUnaria: OP_INCREMENTO . expresionUnaria

    IDENTIFICADOR    desplazar e ir al estado 4
    SIZEOF           desplazar e ir al estado 6
    CTE_DECIMAL      desplazar e ir al estado 7
    CTE_OCTAL        desplazar e ir al estado 8
    CTE_HEXADECIMAL  desplazar e ir al estado 9
    CTE_REAL         desplazar e ir al estado 10
    OP_INCREMENTO    desplazar e ir al estado 11
    OP_DECREMENTO    desplazar e ir al estado 12
    CTE_CADENA       desplazar e ir al estado 23
    CTE_CARACTER     desplazar e ir al estado 24
    '&'              desplazar e ir al estado 26
    '+'              desplazar e ir al estado 27
    '-'              desplazar e ir al estado 28
    '*'              desplazar e ir al estado 29
    '('              desplazar e ir al estado 71
    '~'              desplazar e ir al estado 31
    '!'              desplazar e ir al estado 32

    expresionUnaria    ir al estado 72
    operadorUnario     ir al estado 48
    expresionSufijo    ir al estado 49
    expresionPrimaria  ir al estado 50
    constante          ir al estado 51


estado 12

   38 expresionUnaria: OP_DECREMENTO . expresionUnaria

    IDENTIFICADOR    desplazar e ir al estado 4
    SIZEOF           desplazar e ir al estado 6
    CTE_DECIMAL      desplazar e ir al estado 7
    CTE_OCTAL        desplazar e ir al estado 8
    CTE_HEXADECIMAL  desplazar e ir al estado 9
    CTE_REAL         desplazar e ir al estado 10
    OP_INCREMENTO    desplazar e ir al estado 11
    OP_DECREMENTO    desplazar e ir al estado 12
    CTE_CADENA       desplazar e ir al estado 23
    CTE_CARACTER     desplazar e ir al estado 24
    '&'              desplazar e ir al estado 26
    '+'              desplazar e ir al estado 27
    '-'              desplazar e ir al estado 28
    '*'              desplazar e ir al estado 29
    '('              desplazar e ir al estado 71
    '~'              desplazar e ir al estado 31
    '!'              desplazar e ir al estado 32

    expresionUnaria    ir al estado 73
    operadorUnario     ir al estado 48
    expresionSufijo    ir al estado 49
    expresionPrimaria  ir al estado 50
    constante          ir al estado 51


estado 13

  102 sentenciaIteracion: DO . sentencia WHILE '(' expresion ')' ';'

    IDENTIFICADOR    desplazar e ir al estado 4
    SIZEOF           desplazar e ir al estado 6
    CTE_DECIMAL      desplazar e ir al estado 7
    CTE_OCTAL        desplazar e ir al estado 8
    CTE_HEXADECIMAL  desplazar e ir al estado 9
    CTE_REAL         desplazar e ir al estado 10
    OP_INCREMENTO    desplazar e ir al estado 11
    OP_DECREMENTO    desplazar e ir al estado 12
    DO               desplazar e ir al estado 13
    WHILE            desplazar e ir al estado 14
    IF               desplazar e ir al estado 15
    SWITCH           desplazar e ir al estado 16
    CASE             desplazar e ir al estado 17
    DEFAULT          desplazar e ir al estado 18
    BREAK            desplazar e ir al estado 19
    CONTINUE         desplazar e ir al estado 20
    FOR              desplazar e ir al estado 21
    RETURN           desplazar e ir al estado 22
    CTE_CADENA       desplazar e ir al estado 23
    CTE_CARACTER     desplazar e ir al estado 24
    ';'              desplazar e ir al estado 25
    '&'              desplazar e ir al estado 26
    '+'              desplazar e ir al estado 27
    '-'              desplazar e ir al estado 28
    '*'              desplazar e ir al estado 29
    '('              desplazar e ir al estado 30
    '~'              desplazar e ir al estado 31
    '!'              desplazar e ir al estado 32
    '{'              desplazar e ir al estado 33

    expresion                ir al estado 35
    expresionAsignacion      ir al estado 36
    expresionCondicional     ir al estado 37
    expresionOLogico         ir al estado 38
    expresionYLogico         ir al estado 39
    expresionOInclusivo      ir al estado 40
    expresionY               ir al estado 41
    expresionIgualdad        ir al estado 42
    expresionRelacional      ir al estado 43
    expresionAditiva         ir al estado 44
    expresionMultiplicativa  ir al estado 45
    expresionConversion      ir al estado 46
    expresionUnaria          ir al estado 47
    operadorUnario           ir al estado 48
    expresionSufijo          ir al estado 49
    expresionPrimaria        ir al estado 50
    constante                ir al estado 51
    sentencia                ir al estado 74
    sentenciaExpresion       ir al estado 56
    sentenciaCompuesta       ir al estado 57
    sentenciaSeleccion       ir al estado 58
    sentenciaIteracion       ir al estado 59
    sentenciaEtiquetada      ir al estado 60
    sentenciaSalto           ir al estado 61


estado 14

  101 sentenciaIteracion: WHILE . '(' expresion ')' sentencia

    '('  desplazar e ir al estado 75


estado 15
